--- a/index.html
+++ b/index.html
@@ -9,20 +9,25 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.rtl.min.css"
         integrity="sha384-dpuaG1suU0eT09tx5plTaGMLBsfDLzUCCUXOY2j/LSvXYuG6Bqs43ALlhIqAJVRb" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+
     <link rel="stylesheet" href="./index.css">
     <title>Suchanya</title>
 </head>
 
 <body class="body-block">
-    <div class="container text-center ">
-        <div class="row">
+    <div class="container container-bg">
+        <div class="row text-center ">
             <div class="col">
                 <p class="fw-bold header">Resume</p>
             </div>
         </div>
         <div class="row">
-            <div class="col">
+            <div class="col-3">
                 <img src="./suit.2.png" class=" profile">
+            </div>
+            <div class="col text-left">
+                <a href="https://www.facebook.com/bbest.suchanya.9"  target="_blank"><i class="bi bi-facebook"></i> My Facebook Profile</a>
             </div>
         </div>
     </div>
