fix: add background and about me profile

--- a/index.html
+++ b/index.html
@@ -16,21 +16,37 @@
 </head>
 
 <body class="body-block">
-    <div class="container container-bg">
-        <div class="row text-center ">
-            <div class="col">
-                <p class="fw-bold header">Resume</p>
+    <div class="container container-bg d-flex flex-column justify-content-center align-items-center">
+        <!-- จัดให้ตรงกลางทั้งแนวตั้งและแนวนอน -->
+        <div class="bg-light resume-contain mb-4">
+            <div class="row">
+                <div class="col-5">
+                    <img src="./suit.2.png" class="profile" alt="Profile Picture">
+                </div>
+                <div class="col-7">
+                    <p class="header fw-bold">Suchanya Klakhayan</p>
+                    <p class="Subtopic fw-bold">About Me</p>
+                    <p class="text-content">I graduated from Rambhai Barni Rajabhat University with a Bachelor of
+                        Education (Computer Education). I am interested in a career as a software testing and software
+                        developer. I am ready to learn to work, have good interpersonal and communication skills, work
+                        as a team, have good analytical skills, and maintain good relationships while always developing
+                        myself.</p>
+                    <div class="row">
+                        <a class="col-1 text-black" href="https://www.facebook.com/bbest.suchanya.9" target="_blank"><i
+                                class="bi bi-facebook"></i></a>
+                        <a class="col-1 text-black" href="#" target="_blank"><i class="bi bi-line"></i></a>
+                        <a class="col-1 text-black" href="https://github.com/suchanya05" target="_blank"><i class="bi bi-github"></i></a>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-3">
-                <img src="./suit.2.png" class=" profile">
-            </div>
-            <div class="col text-left">
-                <a href="https://www.facebook.com/bbest.suchanya.9"  target="_blank"><i class="bi bi-facebook"></i> My Facebook Profile</a>
+        <div class="bg-light row">
+            <div class="col text-center"> <!-- จัดให้อยู่กลาง -->
+                oyhuigvugcugbi
             </div>
         </div>
     </div>
+
 </body>
 
 </html>
