--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         integrity="sha384-dpuaG1suU0eT09tx5plTaGMLBsfDLzUCCUXOY2j/LSvXYuG6Bqs43ALlhIqAJVRb" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Suchanya</title>
 </head>
 
