fix : add profile history

--- a/index.html
+++ b/index.html
@@ -18,35 +18,131 @@
 <body class="body-block">
     <div class="container container-bg d-flex flex-column justify-content-center align-items-center">
         <!-- จัดให้ตรงกลางทั้งแนวตั้งและแนวนอน -->
-        <div class="bg-light resume-contain mb-4">
+        <div class="bg-light resume-contain mb-4 p-4">
             <div class="row">
-                <div class="col-5">
+                <div class="col-12 col-md-5 text-center">
                     <img src="./suit.2.png" class="profile" alt="Profile Picture">
                 </div>
-                <div class="col-7">
+                <div class="col-12 col-md-7">
                     <p class="header fw-bold">Suchanya Klakhayan</p>
                     <p class="Subtopic fw-bold">About Me</p>
                     <p class="text-content">I graduated from Rambhai Barni Rajabhat University with a Bachelor of
-                        Education (Computer Education). I am interested in a career as a software testing and software
+                        Education (Computer Education). I am interested in a career as a software tester and software
                         developer. I am ready to learn to work, have good interpersonal and communication skills, work
                         as a team, have good analytical skills, and maintain good relationships while always developing
                         myself.</p>
                     <div class="row">
                         <a class="col-1 text-black" href="https://www.facebook.com/bbest.suchanya.9" target="_blank"><i
                                 class="bi bi-facebook"></i></a>
-                        <a class="col-1 text-black" href="#" target="_blank"><i class="bi bi-line"></i></a>
-                        <a class="col-1 text-black" href="https://github.com/suchanya05" target="_blank"><i class="bi bi-github"></i></a>
+                        <a class="col-1 text-black" href="https://line.me/ti/p/1etQbIq7_y" target="_blank"><i
+                                class="bi bi-line"></i></a>
+                        <a class="col-1 text-black" href="https://github.com/suchanya05" target="_blank"><i
+                                class="bi bi-github"></i></a>
                     </div>
                 </div>
             </div>
         </div>
+
+
         <div class="bg-light row">
-            <div class="col text-center"> <!-- จัดให้อยู่กลาง -->
-                oyhuigvugcugbi
+            <div class="bg-light col-12 pt-3">
+                <div class="col text-center Subtopic"> <!-- จัดให้อยู่กลาง -->
+                    <p class="Subtopic fw-bold " style="color: mediumpurple; ">Personal information</p>
+                    <hr>
+                    <p class="text-content"> My name is Suchanya Klakhayan <br>
+                        Data or birth : 25 May 2002 <br>
+                        Age : 22 years old <br>
+                        Weight : 80 Kg. <br>
+                        Height : 162 Cm. <br>
+                    </p>
+                </div>
             </div>
+            <div class="col-12 text-center Subtopic">
+                <hr>
+                <p class="Subtopic fw-bold " style="color: mediumpurple; ">Personal experience</p>
+                <hr>
+            </div>
+
+
+            <div class="col-md-4 Subtopic">
+                <div class="card text-bs-light-border-subtle mb-2" style="max-width: 100%;">
+                    <div class="card-header">
+                        <p class="Subtopic fw-bold text-center p-3" style="color: mediumpurple;">Skills</p>
+                    </div>
+                    <div class="card-body">
+                        <p class="text-content fw-bold" style="text-align: left;">Language</p>
+                        <p class="text-content" style="text-align: left;">- Python <br> - C, C# <br> - HTML, CSS</p>
+
+                        <p class="text-content fw-bold" style="text-align: left;">Database</p>
+                        <p class="text-content" style="text-align: left;">- SQL</p>
+
+                        <p class="text-content fw-bold" style="text-align: left;">Tools</p>
+                        <p class="text-content" style="text-align: left;">- Github <br> - Postman <br> - DBeaver
+                            (PostgreSQL)</p>
+
+                        <p class="text-content fw-bold" style="text-align: left;">Framework</p>
+                        <p class="text-content" style="text-align: left;">- ASP.NET <br> - NodeJS-Express</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 Subtopic">
+                <div class="card text-bs-light-border-subtle mb-2" style="max-width: 100%;">
+                    <div class="card-header">
+                        <p class="Subtopic fw-bold text-center p-3" style="color: mediumpurple;">Experience</p>
+                    </div>
+                    <div class="card-body">
+                        <p class="text-content fw-bold" style="text-align: left;">Intern</p>
+                        <p class="text-content" style="text-align: left;">- Klongyalwattayakom school, Trat, 1 months
+                            <br>
+                            - Watkireewiharn(somdejphawannarat Aoppatham school), Trat, 1 months <br>
+                            - watnongbua school, Chanthaburi, 1 month <br>
+                            - Watkireewiharn(somdejphawannarat Aoppatham school), Trat, 6 months
+                        </p>
+                        <p class="text-content fw-bold" style="text-align: left;">Working List</p>
+                        <p class="text-content" style="text-align: left;"> Maintain school information systems (Backend
+                            : .Net , C#)
+                            Design websites and videos for use within the school.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 Subtopic">
+                <div class="card text-bs-light-border-subtle mb-3" style="max-width: 100%;">
+                    <div class="card-header">
+                        <p class="Subtopic fw-bold text-center p-3" style="color: mediumpurple;">Education</p>
+                    </div>
+                    <div class="card-body">
+                        <p class="text-content fw-bold" style="text-align: left;">High School</p>
+                        <p class="text-content" style="text-align: left;">Phutthaisong school, Buriram
+                            2560-2563</p>
+                        <p class="text-content fw-bold" style="text-align: left;">University</p>
+                        <p class="text-content" style="text-align: left;">Bachelor of Education (Computer Education)
+                            Rambhai Barni Rajabhat University, Chanthaburi
+                            2563-2567 GPA : 2.78 </p>
+                    </div>
+                </div>
+            </div>
+            <div class="bg-light col-12 py-3">
+                <div class="col text-center Subtopic"> <!-- จัดให้อยู่ชิดซ้าย -->
+                    <hr>
+                    <p class="Subtopic fw-bold text-center" style="color: mediumpurple;">Contact Details</p>
+                    <hr>
+                    <a class="text-content text-black"><i class="bi bi-envelope-at-fill"></i> Email:
+                        kl.suchanya@gmail.com
+                    </a>
+                    <br>
+                    <a class=" text-content text-black" href="https://www.facebook.com/bbest.suchanya.9" target="_blank"><i
+                            class="bi bi-facebook"></i> Facebook: สุชัญญา กล้าขยัน</a>
+                    <br>
+                    <a class="text-content text-black" href="https://github.com/suchanya05" target="_blank"><i
+                            class="bi bi-github"></i> Github : suchanya05</a>
+
+                </div>
+            </div>
+
         </div>
     </div>
-
 </body>
 
 </html>
