--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                     <img src="./suit.2.png" class="profile" alt="Profile Picture">
                 </div>
                 <div class="col-12 col-md-7">
-                    <p class="header fw-bold">Suchanya Klakhayan</p>
-                    <p class="Subtopic fw-bold">About Me</p>
+                    <p class="header fw-bold" style="color: mediumpurple;">Suchanya Klakhayan</p>
+                    <p class="Subtopic fw-bold" style="color: mediumpurple;">About Me</p>
                     <p class="text-content">I graduated from Rambhai Barni Rajabhat University with a Bachelor of
                         Education (Computer Education). I am interested in a career as a software tester and software
                         developer. I am ready to learn to work, have good interpersonal and communication skills, work
@@ -33,11 +33,11 @@
                         myself.</p>
                     <div class="row">
                         <a class="col-1 text-black" href="https://www.facebook.com/bbest.suchanya.9" target="_blank"><i
-                                class="bi bi-facebook"></i></a>
+                                class="bi bi-facebook" style="color: mediumpurple;"></i></a>
                         <a class="col-1 text-black" href="https://line.me/ti/p/1etQbIq7_y" target="_blank"><i
-                                class="bi bi-line"></i></a>
+                                class="bi bi-line"style="color: mediumpurple;"></i></a>
                         <a class="col-1 text-black" href="https://github.com/suchanya05" target="_blank"><i
-                                class="bi bi-github"></i></a>
+                                class="bi bi-github"style="color: mediumpurple;"></i></a>
                     </div>
                 </div>
             </div>
@@ -131,10 +131,10 @@
                     <a class="text-content text-black"><i class="bi bi-envelope-at-fill"></i> Email:
                         kl.suchanya@gmail.com
                     </a>
-                    <br>
+                    
                     <a class=" text-content text-black" href="https://www.facebook.com/bbest.suchanya.9" target="_blank"><i
                             class="bi bi-facebook"></i> Facebook: สุชัญญา กล้าขยัน</a>
-                    <br>
+                    
                     <a class="text-content text-black" href="https://github.com/suchanya05" target="_blank"><i
                             class="bi bi-github"></i> Github : suchanya05</a>
 
